--- a/.github/workflows/docker-sync.yml
+++ b/.github/workflows/docker-sync.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v3
         
       - name: Login to Aliyun ACR
-        run: docker login -u ${{ secrets.ALIYUN_USERNAME }} -p ${{ secrets.ALIYUN_PASSWORD }} registry.cn-hangzhou.aliyuncs.com
+        run: docker login -u ${{ secrets.ALIYUN_USERNAME }} -p ${{ secrets.ALIYUN_PASSWORD }} registry.cn-guangzhou.aliyuncs.com
 
       - name: Pull, Tag and Push
         run: |
@@ -19,7 +19,7 @@ jobs:
           docker pull justlikemaki/openclaw-docker-cn-im:latest
           
           # 2. 重新打标签，指向你的阿里云仓库（请把 talins-ai 替换为你的命名空间，openclaw 替换为仓库名）
-          docker tag justlikemaki/openclaw-docker-cn-im:latest registry.cn-hangzhou.aliyuncs.com/talins-ai/openclaw:latest
+          docker tag justlikemaki/openclaw-docker-cn-im:latest registry.cn-guangzhou.aliyuncs.com/Talins/ai/openclaw:latest
           
           # 3. 推送到阿里云
-          docker push registry.cn-hangzhou.aliyuncs.com/talins-ai/openclaw:latest
+          docker push registry.cn-guangzhou.aliyuncs.com/Talins/ai/openclaw:latest
