--- a/.github/workflows/docker-sync.yml
+++ b/.github/workflows/docker-sync.yml
@@ -16,10 +16,10 @@ jobs:
       - name: Pull, Tag and Push
         run: |
           # 1. 从 Docker Hub 拉取目标镜像
-          docker pull 1186258278/openclaw-zh:latest
+          docker pull justlikemaki/aiclient-2-api
           
           # 2. 重新打标签，指向你的阿里云仓库（请把 talins-ai 替换为你的命名空间，openclaw 替换为仓库名）
-          docker tag 1186258278/openclaw-zh:latest registry.cn-guangzhou.aliyuncs.com/talins/openclaw:latest
+          docker tag justlikemaki/aiclient-2-api registry.cn-guangzhou.aliyuncs.com/talins/aiclient-2-api:latest
           
           # 3. 推送到阿里云
-          docker push registry.cn-guangzhou.aliyuncs.com/talins/openclaw:latest
+          docker push registry.cn-guangzhou.aliyuncs.com/talins/aiclient-2-api:latest
